--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -15,27 +15,22 @@
 }
 
 .error-page {
-    background-color: white;
     width: 100vw;
     height: 100vh;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0.5rem;
 }
 
-h1 {
-    font-size: 4rem;
-    font-family: space-mono;
-    font-style: normal;
-    font-weight: bold;
-    line-height: 95px;
-    letter-spacing: -0.035em;
+.message-404 {
+    height: 10vh;
+    padding: 20px;
+    font-family: Inconsolata;
+    font-weight: bolder;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    letter-spacing: -0.08em;
 }
 
 .middle-container {
-    height: 80%;
+    height: 80vh;
     width: 90%;
     display: flex;
     justify-content: space-around;
@@ -46,55 +41,43 @@ h1 {
     padding: 50px;
 }
 
+.scarecrow-image-container {
+    width: 35%;
+}
+
 .scarecrow-image {
     width: 100%;
-    height: 100%;
+}
+
+h1 {
+    font-size: 4rem;
+    font-family: space-mono;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 6rem;
+    letter-spacing: -0.035em;
 }
 
 .message {
-    display: flex;
     width: 40%;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     font-family: space-mono;
     font-size: 1.5rem;
     line-height: 2.25rem;
     letter-spacing: -0.035rem;
-    height: 65%;
-}
-
-.message-404 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 20px;
-    font-family: Inconsolata;
-    font-weight: bolder;
-    font-size: 1.5rem;
-    line-height: 1.5rem;
-    letter-spacing: -0.08em;
 }
 
 .explanation {
     color: #4F4F4F;
     width: 60%;
-}
-
-.credits {
-    position: absolute;
-    bottom: 0;
-    margin: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 17px;
-    text-align: center;
-    color: #BDBDBD;
+    margin: 32px 0;
 }
 
 .back-to-homepage {
-    height: 3.5rem;
-    width: 11rem;
+    height: 54px;
+    width: 167px;
     background-color: #333333;
     color: white;
     font-family: space-mono;
@@ -103,14 +86,73 @@ h1 {
     line-height: 1.45;
     letter-spacing: -0.035em;
     text-align: center;
-    padding: 1.1rem;
+    padding: 18px;
 }
 
 .back-to-homepage:hover {
     background-color: #847daa;
 }
 
-.scarecrow-image-container {
-    width: 40%;
-    height: 85%;
+.credits {
+    height: 10vh;
+    padding: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 0.8rem;
+    line-height: 0.9rem;
+    color: #BDBDBD;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+@media screen and (max-width: 900px) {
+    .middle-container {
+        flex-direction: column;
+    }
+    .scarecrow-image-container {
+        width: 80%;
+    }
+    .message {
+        text-align: center;
+        width: 100%;
+        margin-top: 50px;
+    }
+    .back-to-homepage {
+        align-self: center;
+    }
+    .explanation {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .scarecrow-image-container {
+        margin-top: 25px;
+        width: 75%;
+    }
+    .middle-container {
+        padding: 10px;
+    }
+    .explanation {
+        width: 100%;
+        font-size: 1.15rem;
+        margin-top: 10px;
+        margin-bottom: 50px;
+    }
+    h1 {
+        font-size: 2.5rem;
+        line-height: 3.5rem;
+        letter-spacing: -0.15rem;
+        margin-top: 20px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .message {
+        margin-top: 0;
+    }
+    h1 {
+        margin-top: 0;
+    }
 }
